Removing tile flags for rendering on level below for now. Updated UI and added loc loading. Refactored some methods. Fixed jar build